@@ -5,3 +5,5 @@ depends:
     claim
 xml:
     benefit.xml
+    claim.xml
+    event_type.xml
